added products page and content

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -6,7 +6,7 @@
   <nav>
     <a href="/" >Print ED</a>
     <ul>
-      <li><a href="/">Our Products</a></li>
+      <li><a href="/products">Our Products</a></li>
       <li><a href="/">Services</a></li>
       <li><a href="/">Contact Us</a></li>
       <li><a href="/">Request Quote</a></li>
