added 3 featured product pages and connected links

--- a/src/components/HomePage/FeaturedProducts.astro
+++ b/src/components/HomePage/FeaturedProducts.astro
@@ -22,16 +22,16 @@ const integratedFormUrl = `${import.meta.env.STRAPI_URL}${integratedFormImage}`;
     <section>
         <h3>{pressureSealTitle}</h3>
         <img src={pressureSealUrl} alt="random alt text">
-        <a href="#">{pressureSealBtn}</a>
+        <a href="/pressuresealenvelope">{pressureSealBtn}</a>
     </section>
     <section>
         <h3>{linerlessLabelTitle}</h3>
         <img src={linerlessLabelUrl} alt="random alt text">
-        <a href="#">{linerlessLabelBtn}</a>
+        <a href="/linerlesslabel">{linerlessLabelBtn}</a>
     </section>
     <section>
         <h3>{integratedFormText}</h3>
         <img src={integratedFormUrl} alt="random alt text">
-        <a href="#">{integratedFormBtn}</a>
+        <a href="/integratedformlabel">{integratedFormBtn}</a>
     </section>
 </div>
