--- a/src/components/Products/FeaturedProducts.astro
+++ b/src/components/Products/FeaturedProducts.astro
@@ -21,16 +21,16 @@ const integratedformUrl = `${import.meta.env.STRAPI_URL}${integratedformImage}`;
     <section>
         <h3>{pressuresealTitle}</h3>
         <img src={pressuresealUrl} alt="random alt text">
-        <a href="#">{pressuresealBtn}</a>
+        <a href="/pressuresealenvelope">{pressuresealBtn}</a>
     </section>
     <section>
         <h3>{linerlessTitle}</h3>
         <img src={linerlessUrl} alt="random alt text">
-        <a href="#">{linerlessBtn}</a>
+        <a href="/linerlesslabel">{linerlessBtn}</a>
     </section>
     <section>
         <h3>{integratedformTitle}</h3>
         <img src={integratedformUrl} alt="random alt text">
-        <a href="#">{integratedformBtn}</a>
+        <a href="/integratedformlabel">{integratedformBtn}</a>
     </section>
 </div>
