--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -9,7 +9,7 @@
       <li><a href="/products">Our Products</a></li>
       <li><a href="/">Services</a></li>
       <li><a href="/">Contact Us</a></li>
-      <li><a href="/">About Us</a></li>
+      <li><a href="/about">About Us</a></li>
       <li><a href="/">Request Quote</a></li>
     </ul>
   </nav>
