--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -3,11 +3,12 @@
 
 ---
 <header>
+  <p>780-123-4567 | abcd@gmail.ca</p>
   <nav>
     <a href="/" >Print ED</a>
     <ul>
       <li><a href="/products">Our Products</a></li>
-      <li><a href="/">Services</a></li>
+      <li><a href="/services">Services</a></li>
       <li><a href="/">Contact Us</a></li>
       <li><a href="/about">About Us</a></li>
       <li><a href="/">Request Quote</a></li>
