--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -11,6 +11,7 @@
       <li><a href="/">Contact Us</a></li>
       <li><a href="/about">About Us</a></li>
       <li><a href="/">Request Quote</a></li>
+      <li><a href="/">jasmine</a></li>
     </ul>
   </nav>
 </header>
