--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -9,7 +9,7 @@
     <ul>
       <li><a href="/products">Our Products</a></li>
       <li><a href="/services">Services</a></li>
-      <li><a href="/">Contact Us</a></li>
+      <li><a href="/contact-us">Contact Us</a></li>
       <li><a href="/about">About Us</a></li>
       <li><a href="/">Request Quote</a></li>
     </ul>
