added request quote page

--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -11,7 +11,7 @@
       <li><a href="/services">Services</a></li>
       <li><a href="/contact-us">Contact Us</a></li>
       <li><a href="/about">About Us</a></li>
-      <li><a href="/">Request Quote</a></li>
+      <li><a href="/request-quote">Request Quote</a></li>
     </ul>
   </nav>
 </header>
