--- a/src/components/LinerlessLabel/Hero.astro
+++ b/src/components/LinerlessLabel/Hero.astro
@@ -1,11 +1,11 @@
 ---
-const {linerlesslabelHeader, linerlesslabelDesc, linerlesslabelImage} = Astro.props;
+const {linerlesslabelHeader, linerlesslabelText, linerlessImage} = Astro.props;
 
-const photoUrl = `${import.meta.env.STRAPI_URL}${linerlesslabelImage}`;
+const photoUrl = `${import.meta.env.STRAPI_URL}${linerlessImage}`;
 ---
 
 <div>
     <h1>{linerlesslabelHeader}</h1>
-    <p>{linerlesslabelDesc}</p>
+    <p>{linerlesslabelText}</p>
     <img src={photoUrl} alt="random alt text">
 </div>
