--- a/src/components/Products/ProductsHero.astro
+++ b/src/components/Products/ProductsHero.astro
@@ -1,8 +1,11 @@
 ---
-const {productHeroHeader, productHeroText} = Astro.props;
+const {productHeroHeader, productHeroText, productHeroImage} = Astro.props;
+
+const photoUrl = `${import.meta.env.STRAPI_URL}${productHeroImage}`;
 ---
 
 <div>
     <h1>{productHeroHeader}</h1>
+    <img src={photoUrl} alt="random alt text">
     <p>{productHeroText}</p>
 </div>
