--- a/src/layouts/Nav.astro
+++ b/src/layouts/Nav.astro
@@ -3,7 +3,7 @@
 
 ---
 <header>
-  <p>780-123-4567 | abcd@gmail.ca</p>
+  <p>780-906-9959 | info@printedonline.ca</p>
   <nav>
     <a href="/" >Print ED</a>
     <ul>
