--- a/src/components/Products/MoreProducts.astro
+++ b/src/components/Products/MoreProducts.astro
@@ -1,64 +1,78 @@
 ---
-const { 
+const {
     moreproductsHeader, 
-    formsTitle, 
-    envelopesTitle,
-    chequesTitle, 
-    labelsmarketingTitle, 
-    formsImageGallery  = [], 
-    envelopesImageGallery  = [], 
-    chequesImageGallery = [], 
-    labelsmarketingImageGallery = [] 
+    lasercutTitle, 
+    lasercutImage,
+    highqualitylaserTitle,
+    lasercutText,
+    partsText,
+    featuresText,
+    customsizesText,
+    snapsetTitle,
+    snapsetImage,
+    durableTitle,
+    multipartText,
+    snapsetpartsText,
+    commonuseText,
+    fieldserviceText,
+    continuousTitle,
+    continuousImage,
+    reliableTitle,
+    continuousText,
+    continuouspartsText,
+    idealforText,
+    accountingText,
+    customenvelopeTitle,
+    customenvelopeImage,
+    deliverbrandfirstTitle,
+    daytodayText,
+    regularText,
+    availableoptionsText,
+    regularwindowText
 } = Astro.props;
 
-const baseUrl = import.meta.env.STRAPI_URL;
+const lasercutURL = `${import.meta.env.STRAPI_URL}${lasercutImage}`;
+const snapsetURL = `${import.meta.env.STRAPI_URL}${snapsetImage}`;
+const continuousURL = `${import.meta.env.STRAPI_URL}${continuousImage}`;
+const customenvelopeURL = `${import.meta.env.STRAPI_URL}${customenvelopeImage}`;
 ---
-
 
 <div>
     <h2>{moreproductsHeader}</h2>
     <section>
-        <h3>{formsTitle}</h3>
-        {formsImageGallery.map((formsIG) => (
-        <img 
-            src={`${baseUrl}${formsIG.url}`} 
-            alt={formsIG.alternativeText || formsIG.name} 
-            width={formsIG.width} 
-            height={formsIG.height}/>
-        <p>{formsIG.caption}</p>
-         ))}
+        <h3>{lasercutTitle}</h3>
+        <img src={lasercutURL} alt="random alt text">
+        <p>{highqualitylaserTitle}</p>
+        <p>{lasercutText}</p>
+        <p>{partsText}</p>
+        <p>{featuresText}</p>
+        <p>{customsizesText}</p>
     </section>
     <section>
-        <h3>{envelopesTitle}</h3>
-        {envelopesImageGallery.map((envelopeIG) => (
-        <img 
-            src={`${baseUrl}${envelopeIG.url}`} 
-            alt={envelopeIG.alternativeText || envelopeIG.name} 
-            width={envelopeIG.width} 
-            height={envelopeIG.height}/>
-        <p>{envelopeIG.caption}</p>
-         ))}
+        <h3>{snapsetTitle}</h3>
+        <img src={snapsetURL} alt="random alt text">
+        <p>{durableTitle}</p>
+        <p>{multipartText}</p>
+        <p>{snapsetpartsText}</p>
+        <p>{commonuseText}</p>
+        <p>{fieldserviceText}</p>
     </section>
     <section>
-        <h3>{chequesTitle}</h3>
-        {chequesImageGallery.map((chequesIG) => (
-        <img 
-            src={`${baseUrl}${chequesIG.url}`} 
-            alt={chequesIG.alternativeText || chequesIG.name} 
-            width={chequesIG.width} 
-            height={chequesIG.height}/>
-        <p>{chequesIG.caption}</p>
-         ))}
+        <h3>{continuousTitle}</h3>
+        <img src={continuousURL} alt="random alt text">
+        <p>{reliableTitle}</p>
+        <p>{continuousText}</p>
+        <p>{continuouspartsText}</p>
+        <p>{idealforText}</p>
+        <p>{accountingText}</p>
     </section>
     <section>
-        <h3>{labelsmarketingTitle}</h3>
-        {labelsmarketingImageGallery.map((labelsmarketingIG) => (
-        <img 
-            src={`${baseUrl}${labelsmarketingIG.url}`} 
-            alt={labelsmarketingIG.alternativeText || labelsmarketingIG.name} 
-            width={labelsmarketingIG.width} 
-            height={labelsmarketingIG.height}/>
-        <p>{labelsmarketingIG.caption}</p>
-         ))}
+        <h3>{customenvelopeTitle}</h3>
+        <img src={customenvelopeURL} alt="random alt text">
+        <p>{deliverbrandfirstTitle}</p>
+        <p>{daytodayText}</p>
+        <p>{regularText}</p>
+        <p>{availableoptionsText}</p>
+        <p>{regularwindowText}</p>
     </section>
 </div>
